# pdf-transformer

./: .gitignore  README.md  pyproject.toml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
specs/001-excel-pdf-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-excel-pdf-api/checklists/: requirements.md
specs/001-excel-pdf-api/contracts/: api.yaml
src/: __init__.py  config.py  main.py
src/api/: __init__.py
src/api/middleware/: __init__.py  error_handler.py
src/api/routes/: __init__.py  convert.py
src/models/: __init__.py  conversion.py  errors.py  excel.py  pdf.py
src/services/: __init__.py
src/services/converter/: __init__.py  border_utils.py  color_utils.py  conversion_service.py  excel_parser.py  formatting_utils.py  pdf_generator.py  style_builder.py  table_builder.py
src/services/storage/: __init__.py  temp_storage.py
tests/integration/: test_convert_success.py  test_error_corrupted_file.py  test_error_file_too_large.py  test_error_invalid_format.py  test_multisheet.py
